z-index fix

--- a/client/src/shared/Overlay/Overlay.css
+++ b/client/src/shared/Overlay/Overlay.css
@@ -6,7 +6,7 @@
     left:0;
     background: rgba(0,0,0,0.5);
     backdrop-filter: blur(2px);
-    z-index: 60;
+    z-index: 30;
     display:flex;
     justify-content: center;
     align-items: center;
